feat : 전체조회 기능 추가